kubernetes/vms/dc01/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dc01-ad
  namespace: vms
spec:
  selector:
    kubevirt.io/vm: fg-firewall
  ports:
    - name: winrm
      port: 5985
      targetPort: 5985
    - name: ldaps
      port: 636
      targetPort: 636
    - name: ldap
      port: 389
      targetPort: 389
