kubernetes/vms/dc01/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dc01-winrm-ingress
  namespace: vms
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: winrm.lambertlab.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dc01-ad
                port:
                  name: winrm
